--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -1,159 +1,144 @@
-@article{cad_origination,
-    author = "E. Marriot and A. Davis and M. Sawan",
-    title = {Final {Report} on {Status} of {CAD} {Models} {Used} in {Calculating} {Shutdown} {Dose} {Rate} ({SDDR}) {Map}},
-    affiliation = {The University of Wisconsin-Madison},
-    number = {US\_D\_22RKPW},
-    year = {2015},
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-@article{epp_materials,
-    author = "R. Juarez",
-    title = {Neutronics guidelines for {ITER} {Diagnostics} {Division}},
-    affiliation = {UNED},
-    number = {RLVRDP},
-    year = {2015},
-}
+%% Created for Ibrahim, Ahmad M. at 2016-03-11 11:14:08 -0500 
 
-@article{bertalot_communication,
-    author = "L. Bertalot",
-    title = {Private {Communication}},
-    affiliation = {ITER},
-    year = {2015},
-}
 
-@article{cryopump_communication,
-    author = "Alexander Antipenkov",
-    title = {Material {Composition} of the torus cryopump and port cell components for neutronics anlysis},
-    affiliation = {ITER},
-    number = {ITER\_D\_EMEHC6},
-    year = {2015},
-}
+%% Saved with string encoding Unicode (UTF-8) 
 
-@article{iter_sdr_coeffs,
-    author = "Michael Loughlin",
-    title = {Recommendations on {Computation} of {Dose} from {Flux} {Estimates}},
-    affiliation = {ITER},
-    number = {ITER\_D\_29PJCT},
-    year = {2008},
-}
+
 
 @article{pyne_r2s,
-  author = {E. Biondo and A. Davis and A. Scopatz and P. P.H. Wilson},
-  title = {"Rigorous Two-Step Activation for Fusion Systems with PyNE"},
-  journal = {"Transactions of the American Nuclear Society"}
-  volume = {112},
-  year = {2015},
-}
+	Author = {E. Biondo and A. Davis and A. Scopatz and P. P.H. Wilson},
+	Date-Added = {2016-03-11 16:12:53 +0000},
+	Date-Modified = {2016-03-11 16:14:05 +0000},
+	Journal = {Transactions of the American Nuclear Society},
+	Title = {Rigorous Two-Step Activation for Fusion Systems with PyNE},
+	Volume = {112},
+	Year = {2015}}
 
-@article{alara,
-  author = {P. P.H. Wilson and H. Tsige-Tamirat and H. Y. Khater and D. L. Henderson},
-  title = {Validation of the ALARA Activation Code}
-  journal = {Fusion Technology},
-  volume  = {34},
-  issue = {3},
-  year = {1998},
-}
+@article{wagnerNSEFWCADIS,
+	Author = {John C. Wagner and Douglas Peplow and Scott Mosher},
+	Date-Added = {2016-03-11 16:06:03 +0000},
+	Date-Modified = {2016-03-11 16:08:45 +0000},
+	Journal = {Nuclear Science and Engineering},
+	Pages = {37-57},
+	Title = {FW-CADIS Method for Global and Regional Varinace Reduction of Monte Carlo Radiation Transport Calculations},
+	Volume = {176},
+	Year = {2014}}
+
+@article{cad_origination,
+	Affiliation = {The University of Wisconsin-Madison},
+	Author = {E. Marriot and A. Davis and M. Sawan},
+	Number = {US\_D\_22RKPW},
+	Title = {Final {Report} on {Status} of {CAD} {Models} {Used} in {Calculating} {Shutdown} {Dose} {Rate} ({SDDR}) {Map}},
+	Year = {2015}}
+
+@article{epp_materials,
+	Affiliation = {UNED},
+	Author = {R. Juarez},
+	Number = {RLVRDP},
+	Title = {Neutronics guidelines for {ITER} {Diagnostics} {Division}},
+	Year = {2015}}
+
+@article{bertalot_communication,
+	Affiliation = {ITER},
+	Author = {L. Bertalot},
+	Title = {Private {Communication}},
+	Year = {2015}}
+
+@article{cryopump_communication,
+	Affiliation = {ITER},
+	Author = {Alexander Antipenkov},
+	Number = {ITER\_D\_EMEHC6},
+	Title = {Material {Composition} of the torus cryopump and port cell components for neutronics anlysis},
+	Year = {2015}}
+
+@article{iter_sdr_coeffs,
+	Affiliation = {ITER},
+	Author = {Michael Loughlin},
+	Number = {ITER\_D\_29PJCT},
+	Title = {Recommendations on {Computation} of {Dose} from {Flux} {Estimates}},
+	Year = {2008}}
 
 @article{dagmc,
-  author = {T. J. Tautges and P.P.H. Wilson and J. Kraftcheck and B. F. Smith and D. L. Henderson},
-  title = {"Acceleration Techniques for Direct Use of CAD-Based Geometries in Monte Carlo Radiation Transport"},
-  journal = {"International Conference on Mathematics, Computational Methods \& Reactor Physics (M\&C 2009)"},
-  year = {2009},
-}
-
-@article{dagmc_validation,
-  author = {Tim D. Bohm and Steve T Jackson and Mohamed E Sawan and Paul P.H. Wilson},
-  title = {"Benchmarking a CAD-based Monte Carlo code using fusion specific experiments"},
-  journal = {"Nuclear Technology"}
-  volume = {175},
-  year = {2011},
-}
+	Author = {T. J. Tautges and P.P.H. Wilson and J. Kraftcheck and B. F. Smith and D. L. Henderson},
+	Journal = {"International Conference on Mathematics, Computational Methods \& Reactor Physics (M\&C 2009)"},
+	Title = {"Acceleration Techniques for Direct Use of CAD-Based Geometries in Monte Carlo Radiation Transport"},
+	Year = {2009}}
 
 @inproceedings{Scopatz2012b,
-  author = {Anthony Scopatz and Paul K. Romano and Paul P.H. Wilson and Kathryn D. Huff},
-  address = {San Diego, CA, USA},
-  booktitle = {Am. Nuc. Soc. Winter Meeting 2012},
-  month = Nov,
-  title = {{PyNE: Python for Nuclear Engineering}},
-  volume={107},
-  year = {2012}
-}
+	Address = {San Diego, CA, USA},
+	Author = {Anthony Scopatz and Paul K. Romano and Paul P.H. Wilson and Kathryn D. Huff},
+	Booktitle = {Am. Nuc. Soc. Winter Meeting 2012},
+	Month = Nov,
+	Title = {{PyNE: Python for Nuclear Engineering}},
+	Volume = {107},
+	Year = {2012}}
 
 @article{mcr2s,
-title = "Benchmarking the \{MCR2S\} system for high-resolution activation dose analysis in \{ITER\} ",
-journal = "Fusion Engineering and Design ",
-volume = "85",
-number = "1",
-pages = "87 - 92",
-year = "2010",
-note = "",
-issn = "0920-3796",
-doi = "http://dx.doi.org/10.1016/j.fusengdes.2009.07.002",
-url = "http://www.sciencedirect.com/science/article/pii/S0920379609002518",
-author = "A. Davis and R. Pampin",
-keywords = "Neutronics",
-keywords = "R2S",
-keywords = "Shutdown dose",
-keywords = "ITER "
-}
+	Author = {A. Davis and R. Pampin},
+	Doi = {http://dx.doi.org/10.1016/j.fusengdes.2009.07.002},
+	Issn = {0920-3796},
+	Journal = {Fusion Engineering and Design},
+	Keywords = {ITER},
+	Number = {1},
+	Pages = {87 - 92},
+	Title = {Benchmarking the \{MCR2S\} system for high-resolution activation dose analysis in \{ITER\}},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0920379609002518},
+	Volume = {85},
+	Year = {2010},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0920379609002518},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.fusengdes.2009.07.002}}
 
 @article{r2smesh,
-title = "Verification and validation of the \{R2Smesh\} approach for the calculation of high resolution shutdown dose rate distributions ",
-journal = "Fusion Engineering and Design ",
-volume = "87",
-number = "5–6",
-pages = "443 - 447",
-year = "2012",
-note = "Tenth International Symposium on Fusion Nuclear Technology (ISFNT-10) ",
-issn = "0920-3796",
-doi = "http://dx.doi.org/10.1016/j.fusengdes.2011.12.010",
-url = "http://www.sciencedirect.com/science/article/pii/S0920379611006417",
-author = "Mitja Majerle and Dieter Leichtle and Ulrich Fischer and Arkady Serikov",
-keywords = "MCNP",
-keywords = "FISPACT",
-keywords = "R2S",
-keywords = "Shutdown dose rate",
-keywords = "FNG benchmark experiment "
-}
+	Author = {Mitja Majerle and Dieter Leichtle and Ulrich Fischer and Arkady Serikov},
+	Doi = {http://dx.doi.org/10.1016/j.fusengdes.2011.12.010},
+	Issn = {0920-3796},
+	Journal = {Fusion Engineering and Design},
+	Keywords = {FNG benchmark experiment},
+	Note = {Tenth International Symposium on Fusion Nuclear Technology (ISFNT-10)},
+	Number = {5--6},
+	Pages = {443 - 447},
+	Title = {Verification and validation of the \{R2Smesh\} approach for the calculation of high resolution shutdown dose rate distributions},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0920379611006417},
+	Volume = {87},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0920379611006417},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.fusengdes.2011.12.010}}
 
-@ARTICLE{r2suned,
-author={P. Sauvan and J. P. Catalán and F. Ogando and R. Juárez and J. Sanz},
-journal={IEEE Transactions on Nuclear Science},
-title={Development of the R2SUNED Code System for Shutdown Dose Rate Calculations},
-year={2016},
-volume={63},
-number={1},
-pages={375-384},
-keywords={Tokamak devices;dosimetry;fusion reactor theory;neutron flux;plasma toroidal confinement;ACAB codes;ITER computational shutdown dose rate benchmark;MCNP codes;R2SUNED code system;cell-under-voxel approach;conventional averaging technique;flexible decay gamma source sampling;fusion relevant facilities;mesh-based Rigorous-two-step method;neutron flux determination;shutdown dose rate calculations;state-of-the-art R2S systems;strong spatial gradients;Couplings;Estimation;Geometry;Isotopes;Neutrons;Ports (Computers);Spatial resolution;Coupled radiation transport-activation calculations;DEMO;ITER;MCNP;R2S methodology;fusion neutronics;shutdown dose rate},
-doi={10.1109/TNS.2015.2507138},
-ISSN={0018-9499},
-month={Feb},}
+@article{r2suned,
+	Author = {P. Sauvan and J. P. Catal{\'a}n and F. Ogando and R. Ju{\'a}rez and J. Sanz},
+	Doi = {10.1109/TNS.2015.2507138},
+	Issn = {0018-9499},
+	Journal = {IEEE Transactions on Nuclear Science},
+	Keywords = {Tokamak devices;dosimetry;fusion reactor theory;neutron flux;plasma toroidal confinement;ACAB codes;ITER computational shutdown dose rate benchmark;MCNP codes;R2SUNED code system;cell-under-voxel approach;conventional averaging technique;flexible decay gamma source sampling;fusion relevant facilities;mesh-based Rigorous-two-step method;neutron flux determination;shutdown dose rate calculations;state-of-the-art R2S systems;strong spatial gradients;Couplings;Estimation;Geometry;Isotopes;Neutrons;Ports (Computers);Spatial resolution;Coupled radiation transport-activation calculations;DEMO;ITER;MCNP;R2S methodology;fusion neutronics;shutdown dose rate},
+	Month = {Feb},
+	Number = {1},
+	Pages = {375-384},
+	Title = {Development of the R2SUNED Code System for Shutdown Dose Rate Calculations},
+	Volume = {63},
+	Year = {2016},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/TNS.2015.2507138}}
 
 @article{r2s,
-title = "Rigorous mcnp based shutdown dose rate calculations: computational scheme, verification calculations and application to \{ITER\} ",
-journal = "Fusion Engineering and Design ",
-volume = "63–64",
-number = "",
-pages = "107 - 114",
-year = "2002",
-note = "",
-issn = "0920-3796",
-doi = "http://dx.doi.org/10.1016/S0920-3796(02)00144-8",
-url = "http://www.sciencedirect.com/science/article/pii/S0920379602001448",
-author = "Y Chen and U Fischer",
-keywords = "Fusion",
-keywords = "Neutronics",
-keywords = "Activation",
-keywords = "Shutdown dose",
-keywords = "ITER",
-keywords = "Monte Carlo "
-}
+	Author = {Y Chen and U Fischer},
+	Doi = {http://dx.doi.org/10.1016/S0920-3796(02)00144-8},
+	Issn = {0920-3796},
+	Journal = {Fusion Engineering and Design},
+	Keywords = {Monte Carlo},
+	Pages = {107 - 114},
+	Title = {Rigorous mcnp based shutdown dose rate calculations: computational scheme, verification calculations and application to \{ITER\}},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0920379602001448},
+	Volume = {63--64},
+	Year = {2002},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0920379602001448},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/S0920-3796(02)00144-8}}
 
 @techreport{mcnp,
-  author = "{X-5 MONTE CARLO TEAM}",
-  title = "{MCNP -- A General Monte Carlo N-Particle Transport Code, Version 5}",
-  institution = "Los Alamos National Laboratory",
-  number = "LA-UR-03-1987",
-  month = feb,
-  year = 2008,
-}
+	Author = {{X-5 MONTE CARLO TEAM}},
+	Institution = {Los Alamos National Laboratory},
+	Month = feb,
+	Number = {LA-UR-03-1987},
+	Title = {{MCNP -- A General Monte Carlo N-Particle Transport Code, Version 5}},
+	Year = 2008}
