--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -1,12 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Ibrahim, Ahmad M. at 2016-03-11 11:14:08 -0500 
+%% Created for Ibrahim, Ahmad M. at 2016-03-11 16:11:25 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{mscadis,
+	Author = {Ahmad Ibrahim and Douglas Peplow and el al.},
+	Date-Added = {2016-03-11 21:09:08 +0000},
+	Date-Modified = {2016-03-11 21:11:18 +0000},
+	Journal = {Nuclear Technology},
+	Pages = {286-298},
+	Title = {The Multi-Step CADIS Method for Shutdown Dose Rate Calculations and Uncertainty Propagation},
+	Volume = {192},
+	Year = {2015}}
+
+@article{biondoMC2015,
+	Author = {Elliott Biondo and Ahmad Ibrahim and el al.},
+	Date-Added = {2016-03-11 19:38:57 +0000},
+	Date-Modified = {2016-03-11 19:56:56 +0000},
+	Journal = {Proccedings of Joint International Conference on Mathematics and Computation, Supercomputing in Nuclear Apllications, and Monte Carlo Methods, Nashville, TN, April 19-23},
+	Title = {Accelerating Fusion Reactor Neutronics Modeling By Automatic Coupling of Hybrid Monte Carlo/Deterministic Transport and CAD Geometry},
+	Year = {2015}}
+
+@article{denovo,
+	Author = {Thomas Evans et al},
+	Date-Added = {2016-03-11 19:36:59 +0000},
+	Date-Modified = {2016-03-11 19:38:44 +0000},
+	Journal = {Nuclear Technology},
+	Pages = {171},
+	Title = {Denovo: A New Three-Dimensional Parallel Discrete Ordinates Code n SCALe},
+	Volume = {171},
+	Year = {2010}}
+
+@article{advantg,
+	Author = {Scott Mosher and Aron Bevill and Seth Johnson and Ahmad Ibrahim el al.},
+	Date-Added = {2016-03-11 19:34:50 +0000},
+	Date-Modified = {2016-03-11 19:36:56 +0000},
+	Journal = {Oak Ridge National Laboratory Report},
+	Title = {ADVANTG-An Automated Variance Reduction Parameter Generator},
+	Volume = {ORNL/TM-2013/416},
+	Year = {2013}}
+
+@article{wagnerNSECADIS,
+	Author = {John C. Wagner and Ali Haghighat},
+	Date-Added = {2016-03-11 19:28:46 +0000},
+	Date-Modified = {2016-03-11 19:33:51 +0000},
+	Journal = {Nuclear Science and Engineering},
+	Pages = {186-208},
+	Title = {Automated Variance Reduction of Monte Carlo Shielding Calculations Using the Discrete Ordinates Adjoint Function},
+	Volume = {128},
+	Year = {1998}}
 
 @article{pyne_r2s,
 	Author = {E. Biondo and A. Davis and A. Scopatz and P. P.H. Wilson},
@@ -61,11 +108,26 @@
 	Title = {Recommendations on {Computation} of {Dose} from {Flux} {Estimates}},
 	Year = {2008}}
 
+@article{alara,
+	Author = {P. P.H. Wilson and H. Tsige-Tamirat and H. Y. Khater and D. L. Henderson},
+	Issue = {3},
+	Journal = {Fusion Technology},
+	Title = {Validation of the ALARA Activation Code},
+	Volume = {34},
+	Year = {1998}}
+
 @article{dagmc,
 	Author = {T. J. Tautges and P.P.H. Wilson and J. Kraftcheck and B. F. Smith and D. L. Henderson},
 	Journal = {"International Conference on Mathematics, Computational Methods \& Reactor Physics (M\&C 2009)"},
 	Title = {"Acceleration Techniques for Direct Use of CAD-Based Geometries in Monte Carlo Radiation Transport"},
 	Year = {2009}}
+
+@article{dagmc_validation,
+	Author = {Tim D. Bohm and Steve T Jackson and Mohamed E Sawan and Paul P.H. Wilson},
+	Journal = {"Nuclear Technology"},
+	Title = {"Benchmarking a CAD-based Monte Carlo code using fusion specific experiments"},
+	Volume = {175},
+	Year = {2011}}
 
 @inproceedings{Scopatz2012b,
 	Address = {San Diego, CA, USA},
