--- a/src/report.tex
+++ b/src/report.tex
@@ -726,10 +726,10 @@ pumping port is unplugged.
   \label{fig:wwinp}
 \end{figure}
 \subsection{Conclusion}
-The final calculations represent only around 10\% of the overall requested runtime; this is mostly due to calculations not completing with the 3 day allotted runtime on CHTC. When variance reduction parameters that span over many orders of magnitude are being used in non-analog Monte Carlo simulations, it is difficult to estimate the computational time needed to simulate each particle because some of these particles undergo millions of splitting events. To overcome this problem, the authors suggest 1) using the computer time cutoff (CTME) card in MCNP to stop the MCNP runs after reaching a certain amount of running time without losing the results, 2) to increase the frequency of the printing and dumping of MCNP using the PRDMP card, 3) and to avoid the use of the MPI version of MCNP. The Monte Carlo calculations can still run in parallel without using MPI by submitting independent jobs with different random number seeds and statistically averaging the results. The load balancing of the MPI version of MCNP does not consider the huge differences in the computational times needed to simulate different histories that are typical with the use of variance reduction parameters that span many orders of magnitude. The MCNP runs will not be stopped even if the computational time exceeded the time of the CTME card until MCNP reaches the printing and dumping stage. Without increasing the frequency of these dumping events, the time of the CTME card may be ignored for a very long time.
+The final calculations represent only around 10\% of the overall requested runtime; this is mostly due to calculations not completing with the 3 day allotted runtime on CHTC. When variance reduction parameters that span over many orders of magnitude are being used in non-analog Monte Carlo simulations, it is difficult to estimate the computational time needed to simulate each particle because some of these particles undergo millions of splitting events. To overcome this problem, the authors suggest 1) using the computer time cutoff (CTME) card in MCNP to stop the MCNP runs after reaching a certain amount of running time without losing the results, 2) to increase the frequency of the printing and dumping of MCNP using the PRDMP card, 3) and to avoid the use of the message passing interface (MPI) parallel version of MCNP. The Monte Carlo calculations can still run in parallel without using the MPI version by submitting independent jobs with different random number seeds and statistically averaging the results. The load balancing of the MPI version of MCNP does not consider the huge differences in the computating times needed to simulate different histories that are typical with the use of variance reduction parameters that span many orders of magnitude. The MCNP calculations will not be stopped even if the time of CTME card was exceed if MCNP does not reach the printing and dumping stage. Without increasing the frequency of these dumping events, the time of the CTME card may be ignored.
 \\
 \\
-The authors will also like to note that the use of use of global MC variance-reduction techniques, including the FW-CADIS method does not provide optimum variance reduction parameters for SDR calculations. The goal of these global MC variance-reduction techniques is to uniformly distribute the Monte Carlo computational efforts throughout numerous phase-space segments to calculate many Monte Carlo tallies with nearly uniform relative uncertainties. Even though SDR analysis requires the calculation of space- and energy-dependent neutron fluxes, the goal of the analysis is the accurate assessment of the final \gls{sdr}. Global Monte Carlo variance-reduction techniques do not focus MC computational efforts on calculating the production rates of radioisotopes that will ultimately contribute to the \gls{sdr}. On the contrary, the Multi-Step Consistent Adjoint Driven Importance Sampling (MS-CADIS) hybrid MC/deterministic method is currently under development to speed up the \gls{sdr} Monte Carlo neutron transport calculation using an importance function that represents the neutron importance to the final \gls{sdr} \cite{mscadis}. The MS-CADIS method uses the CADIS method to develop consistent source biasing and weight window variance-reduction parameters. However, because the MS-CADIS method focuses on multistep shielding calculations such as the \gls{r2s} calculations of \gls{sdr}, it develops an importance function for the initial radiation transport calculation (e.g., the neutron calculations in \gls{sdr} simulations) that represents the importance of particles to the final response of the overall simulation. This paper explains the theory of the MS-CADIS method and provides some insights into the physical interpretations of the MS-CADIS adjoint neutron source and theMS-CADIS adjoint neutron flux.
+The authors will also like to note that the use of global Monte Carlo variance-reduction techniques, including the FW-CADIS method does not provide optimum variance reduction parameters for the neutron Monte Carlo calculation of the \gls{r2s} \gls{sdr} analysis. The goal of these global Monte Carlo variance-reduction techniques is to uniformly distribute the Monte Carlo computational efforts throughout numerous phase-space segments to calculate many Monte Carlo tallies with nearly uniform relative uncertainties. Even though \gls{sdr} analysis requires the calculation of space- and energy-dependent neutron fluxes, the goal of the analysis is the accurate assessment of the final \gls{sdr}. Global Monte Carlo variance-reduction techniques do not focus MC computational efforts on calculating the production rates of radioisotopes that will ultimately contribute to the \gls{sdr}. The Multi-Step Consistent Adjoint Driven Importance Sampling (MS-CADIS) hybrid MC/deterministic method is specifically under development to speed up the Monte Carlo neutron transport calculation of  \gls{r2s}  \gls{sdr} analysis . The MS-CADIS method uses the CADIS method to develop consistent source biasing and weight window variance-reduction parameters. However, because the MS-CADIS method focuses on multistep shielding calculations such as the \gls{r2s} calculations of \gls{sdr}, it develops an importance function for the initial radiation transport calculation (e.g., the neutron calculations in \gls{sdr} simulations) that represents the importance of particles to the final response of the overall simulation. 
 
  
 \newpage
